Fixed missing client_id on edit appointment link, configured time zone, added some practical styling to body to keep elements from being covered by navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,17 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+body {
+  padding-top: 55px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 20px;
+  overflow-x: hidden;
+}
+
+@media (max-width: 979px) {
+  body {
+    padding-top: 85px;
+  }
+}
